hphp/hack/test/typecheck/list_assign.php.like_types.exp
File "list_assign.php", line 5, characters 3-13:
  ~int
File "list_assign.php", line 6, characters 3-13:
  ~int
File "list_assign.php", line 9, characters 3-14:
  ~int
File "list_assign.php", line 10, characters 3-14:
  ~int
File "list_assign.php", line 12, characters 10-24:
Invalid return type (Typing[4110])
File "list_assign.php", line 3, characters 61-70:
Expected ~(int, int) because it is an unenforceable type
File "list_assign.php", line 12, characters 10-24:
But got (~int, ~int)
